try to get an element's child

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <h2>Fill in the following information to add a new contact to the address book</h2>
         <div class="form-group">
           <label for="first-name">First name</label>
-          <input type="text" calss="form-control" id="first-name" name="" value="">
+          <input type="text" calss="form-control" id="first-name" name="" value="John">
         </div>
         <div class="form-group">
           <label for="last-name">Last name</label>
-          <input type="text" calss="form-control" id="last-name" name="" value="">
+          <input type="text" calss="form-control" id="last-name" name="" value="Smith">
         </div>
         <div class="form-group">
           <label for="phone">Phone number</label>
-          <input type="text" calss="form-control" id="phone" name="" value="">
+          <input type="text" calss="form-control" id="phone" name="" value="1234567">
         </div>
         <button id="add" type="submit" name="btn btn-info">Add contact</button>
       </form>
